[package]
name = "bevy-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
opt-level = "s"

#[target.'cfg(target_arch = "wasm32")'.dependencies]
#bevy_internal = { version = "0.6.0", default-features = false, features = ["webgl"] }


[dependencies]
rand = "0.8.0"

bevy = { version = "0.6.0", features=["jpeg"] }
#bevy_flycam = "0.5.1"
bevy_config_cam = "0.2"
smooth-bevy-cameras = "0.2.0"
#bevy_4x_camera = "0.1.2"
bevy_toolbar = { git = "https://github.com/HeavyRain266/bevy_toolbar"}
bevy_egui = "0.10"
once_cell = "1.9"

[[example]]
name = "load_gltf"
path = "examples/3d/load_gltf.rs"

[[example]]
name = "smooth_cam"
path = "examples/camera/smooth_cam.rs"

[[example]]
name = "pan_orbit_camera"
path = "examples/camera/pan_orbit_camera.rs"

[[example]]
name = "toolbar"
path = "examples/tools/toolbar.rs"

[[example]]
name = "egui"
path = "examples/ui/egui.rs"

[[example]]
name = "config_cam"
path = "examples/camera/config_cam.rs"

